<resources>
    <string name="app_name">BrainiacApp</string>

    <!-- Navigation drawer header -->
    <string name="title_nav_header_results">Answered Correctly</string>
    <string name="title_nav_header_registered">Registered since</string>

    <!-- Navigation drawer menu -->
    <string name="title_nav_drawer_statistics">Statistics</string>
    <string name="title_nav_drawer_play_modes">Play Modes</string>
    <string name="title_nav_drawer_upcoming">Upcoming</string>
    <string name="title_nav_drawer_terms_and_conditions">Terms and conditions</string>
    <string name="title_nav_drawer_configurations">Configurations</string>
    <string name="title_nav_drawer_about">About</string>
    <string name="action_drawer_open">open</string>
    <string name="action_drawer_close">close</string>

    <!-- Tabs title -->
    <string name="title_tab_play">PLAY</string>
    <string name="title_tab_stats">MY STATS</string>
    <string name="title_tab_categories">CATEGORIES</string>

    <!-- CardView categories -->
    <string name="title_cv_roulette">Roulette</string>
    <string name="description_cv_roulette">Random questions of random categories. Prove you are a know-it-all</string>
    <string name="title_cv_subject">Subject</string>
    <string name="description_cv_subject">Random questions of one game. So you can master one subject</string>
    <string name="title_cv_fact">Fact</string>
    <string name="description_cv_fact">Read about your favourite game. One new per day</string>
    <string name="action_configure">CONFIGURE</string>

    <!-- CardView Details -->
    <string name="title_description">Description</string>
    <string name="title_api">API use</string>
    <string name="description_test">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pretium imperdiet ligula, ut finibus felis cursus id. Phasellus commodo pretium tortor id lacinia. Nulla malesuada orci tincidunt maximus tristique. Aenean nec scelerisque nulla, vitae pharetra dui. Nam urna mauris, efficitur vel aliquam quis, ultrices ut ligula. Suspendisse sit amet purus sit amet lectus accumsan mollis. Fusce in mauris non metus sagittis tempor in non risus. Mauris in aliquet dui. Sed posuere rhoncus nunc et venenatis.</string>

    <!-- CardView Summary -->
    <string name="title_summary">Summary</string>
    <string name="detail_total_questions_showed">Total questions showed: </string>
    <string name="detail_questions_answered">Questions answered correctly: </string>
    <string name="detail_facts_read">Facts read: </string>
    <string name="detail_matches_played">Matches played: </string>

    <!-- CardView Points -->
    <string name="title_points">Points</string>
    <string name="subtitle_date">Date</string>
    <string name="score_points">pts</string>
    <string name="action_see_all">SEE ALL</string>

    <!-- Question Test -->
    <string name="action_answer">ANSWER</string>
    <string name="title_ads">ADS</string>

    <!-- Temporary strings -->
    <string name="test_date">yyyy/mm/dd</string>
    <string name="question_test">Where was Wolfgang Amadeus Mozart born on January 27th 1756?</string>
    <string name="action_option">Viena, Austria</string>
    <string name="test_player_name">Player Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
